change height header, fix z-index & height burger navbar

--- a/front/src/assets/scss/components/_nav.scss
+++ b/front/src/assets/scss/components/_nav.scss
@@ -152,6 +152,7 @@ li{
     width:100vw;    
     transform: translateX(0);
     margin-top: 1em;
+    height: auto;
   } 
   .navbar__link {    
     transform: translateX(101%);
