--- a/front/src/assets/scss/layout/_header.scss
+++ b/front/src/assets/scss/layout/_header.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 900px;
+  height: 800px;
   text-align: center;
 
   .myself {
